# workflow-sandbox

./: .cirrus.yml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release-vars.sh  release.yml
requirements/: testing.txt
tests/: test_version.py
workflow_sandbox/: __init__.py  __version__.py  deploy.py
