[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=4.1.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
skip-string-normalization = true
target_version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | /utils/versions.py
)
'''
