[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

[tool.setuptools.packages]
find = {namespaces = false}

[project]
name = "workflow-sandbox"
description = "Testing GitHub actions, Cirrus CI, documentation, and publishing releases of Python packages."
authors = [
    {name = "Various Authors", email = "email@example.com"},
]
keywords = ["example", "workflow"]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: System :: Archiving :: Packaging",
]
requires-python = ">=3.8"
dependencies = ["setuptools_scm"]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/rpanderson/workflow-sandbox"
Documentation = "https://github.com/rpanderson/workflow-sandbox"
Repository = "https://github.com/rpanderson/workflow-sandbox"
Downloads = "https://github.com/rpanderson/workflow-sandbox/releases"
Tracker = "https://github.com/rpanderson/workflow-sandbox/issues/"

[project.optional-dependencies]
development = [
    "pre-commit>=2.3.0",
    "black==19.10b0",
    "flake8==3.7.9",
]
docs = [
    "Sphinx==3.0.1",
    "sphinx-rtd-theme==0.4.3",
    "recommonmark==0.6.0",
]
testing = [
  "pytest",
]

[tool.pytest]
testpaths = "tests"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.black]
line-length = 88
skip-string-normalization = true
target_version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | /utils/versions.py
)
'''
