[metadata]
name = workflow-sandbox
description = Testing GitHub actions, Cirrus CI, documentation, and publishing releases of Python packages.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rpanderson/workflow-sandbox
project_urls = 
    Source Code=https://github.com/rpanderson/workflow-sandbox
    Download=https://github.com/rpanderson/workflow-sandbox/releases
    Tracker=https://github.com/rpanderson/workflow-sandbox/issues
keywords = example workflow
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9    
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Version Control :: Git
    Topic :: System :: Archiving :: Packaging

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
  importlib_metadata>=1.0 ; python_version < '3.8'
  pywin32>=227 ; sys_platform == 'win32'
  setuptools_scm>=4.1.0
  setuptools

[options.extras_require]
development = 
  pre-commit>=2.3.0
  black==19.10b0
  flake8==3.7.9
docs = 
  Sphinx==3.0.1
  sphinx-rtd-theme==0.4.3
  recommonmark==0.6.0
testing = 
  pytest

[tool:pytest]
testpaths = tests

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = workflow_sandbox/utils/versions.py
